--- a/nginx/php-fpm.conf
+++ b/nginx/php-fpm.conf
@@ -1,6 +1,6 @@
 server { 
-    listen       80 default_server; 
-    server_name  _; # all traffic recieve this section. http://wiki.nginx.org/HttpCoreModule#server_name
+    listen       80; 
+    server_name  _;
 
     root    /var/www; 
     index   index.php index.html index.htm; 
