--- a/nginx/cache+reverse_proxy.conf
+++ b/nginx/cache+reverse_proxy.conf
@@ -24,7 +24,7 @@ server {
 
     location / {
        client_max_body_size 100M;
-       proxy_pass http://smartrip.jp;
+       proxy_pass http://hogehoge.com;
        proxy_redirect off;
  
        set $do_not_cache 0;
